backend/kubernetes/01 - questiondb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questiondb
  namespace: g55
spec:
  serviceName: questiondb
  replicas: 1
  selector:
    matchLabels:
      app: questiondb
  template:
    metadata:
      labels:
        app: questiondb
    spec:
      containers:
        - name: questiondb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: questiondb-seed-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: questiondb-seed-volume
          configMap:
            name: questiondb-seed-config
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
