backend/kubernetes/05 - question-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: question-service
  name: question-service
  namespace: g55
spec:
  replicas: 2
  selector:
    matchLabels:
      app: question-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: question-service
    spec:
      containers:
        - image: docker_username/question_service:latest
          imagePullPolicy: IfNotPresent
          name: question-service
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
status: {}
