backend/kubernetes/16 - userdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: userdb
  namespace: g55
spec:
  serviceName: userdb
  replicas: 1
  selector:
    matchLabels:
      app: userdb
  template:
    metadata:
      labels:
        app: userdb
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: userdb-seed-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: userdb-seed-volume
          configMap:
            name: userdb-seed-config
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
