backend/kubernetes/18 - history-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: history-service
  name: history-service
  namespace: g55
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: history-service
    spec:
      containers:
        - image: docker_username/history_service:latest
          imagePullPolicy: IfNotPresent
          name: history-service
          resources:
            requests:
              memory: '1Gi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1000m'
      restartPolicy: Always
status: {}
