backend/kubernetes/28 - historydb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: historydb
  namespace: g55
spec:
  serviceName: historydb
  replicas: 1
  selector:
    matchLabels:
      app: historydb
  template:
    metadata:
      labels:
        app: historydb
    spec:
      containers:
        - name: historydb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: historydb-seed-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: historydb-seed-volume
          configMap:
            name: historydb-seed-config
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
