backend/kubernetes/02 - questiondb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: questiondb
  namespace: g55
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: questiondb
  type: ClusterIP
