backend/kubernetes/04 - user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: g55
spec:
  selector:
    app: user-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
