backend/kubernetes/06 - question-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-service
  namespace: g55
spec:
  selector:
    app: question-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
