backend/kubernetes/12 - rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: g55
spec:
  ports:
    - port: 5672       # AMQP port
      targetPort: 5672
      name: amqp
    - port: 15672      # Management port
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
  type: ClusterIP
