backend/kubernetes/15 - room-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-service
  namespace: g55
spec:
  selector:
    app: room-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
