backend/kubernetes/17 - userdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userdb
  namespace: g55
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: userdb
  type: ClusterIP
