backend/kubernetes/19 - history-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-service
  namespace: g55
spec:
  selector:
    app: history-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
