backend/kubernetes/21 - code-execution-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-execution-service
  namespace: g55
spec:
  selector:
    app: code-execution-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
