backend/kubernetes/21 - history-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: historydb
  namespace: g55
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: historydb
  type: ClusterIP
