backend/kubernetes/23 - collaborative-editor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collaborative-editor-service
  namespace: g55
spec:
  selector:
    app: collaborative-editor-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
