backend/kubernetes/25 - video-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: g55
spec:
  selector:
    app: video-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
