backend/kubernetes/29 - historydb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: historydb
  namespace: g55
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: historydb
  type: ClusterIP
