backend/kubernetes/10 - private-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-api-gateway
  namespace: g55
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://user-service.g55.svc.cluster.local:8080/api/auth/verify-token"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id,X-User-Email,X-User-Name,X-User-Is-Admin"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, X-User-Id, X-User-Email,X-User-Name,X-User-Is-Admin"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/questions
            pathType: Prefix
            backend:
              service:
                name: question-service
                port:
                  number: 8080
          - path: /api/matching
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 8080
          - path: /api/rooms
            pathType: Prefix
            backend:
              service:
                name: room-service
                port:
                  number: 8080
          - path: /api/history
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 8080
          - path: /api/code-execution
            pathType: Prefix
            backend:
              service:
                name: code-execution-service
                port:
                  number: 8080
