backend/kubernetes/13 - websocket-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-api-gateway
  namespace: g55
  annotations:
#    nginx.ingress.kubernetes.io/auth-url: "http://user-service.g55.svc.cluster.local:8080/api/auth/verify-token-param"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /ws/matching
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 8080
          - path: /ws/rooms
            pathType: Prefix
            backend:
              service:
                name: room-service
                port:
                  number: 8080
          - path: /ws/collaborative-editor
            pathType: Prefix
            backend:
              service:
                name: collaborative-editor-service
                port:
                  number: 8080
          - path: /ws/signaling
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 8080
